# gameplay

./: .gitignore  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app-character/src/main/cpp/: game.config
app/src/main/: AndroidManifest.xml
app/src/main/assets/: game.png.config
app/src/main/cpp/: CMakeLists.txt
gameplay/: CMakeLists.txt.0  _CMakeLists.txt  _gameplay.cpp  build.gradle
gameplay-deps/: CMakeLists.txt  buildlib.sh
gameplay-deps/bullet/: CMakeLists.txt
gameplay-deps/freetype-2.4.4/: CMakeLists.txt  CMakeLists.txt.1
gameplay-deps/glad/: CMakeLists.txt
gameplay-deps/glad/src/: glad_egl.c
gameplay-deps/png/: CMakeLists.txt  png.h
gameplay-deps/png-1.6.15/: CMakeLists.txt
gameplay-deps/png-1.6.37/: CMakeLists.txt
gameplay-deps/zlib/: CMakeLists.txt
gameplay/android/jni/: Android.mk  Application.mk
gameplay/src/: temp.sh
gameplay/src/androidTest/java/com/gyabinet/gameplay/: ExampleInstrumentedTest.java
gameplay/src/main/: AndroidManifest.xml
gameplay/src/main/cpp/external-deps/include/glad/: glad_egl.h
gameplay/src/main/cpp/gameplay/: CMakeLists.txt
gameplay/src/main/cpp/gameplay/src/: Base.h  FileSystem.cpp  Game.cpp  Mesh.cpp  MeshPart.cpp  Node.cpp  Node.h  PlatformAndroid.cpp  Scene.cpp  Scene.h  SceneLoader.cpp  ScriptController.cpp  gameplay-main-android.cpp
gameplay/src/main/cpp/gameplay/src/lua/: lua_Game.cpp  lua_Global.cpp  lua_Joint.cpp  lua_Node.cpp  lua_Ref.cpp  lua_Scene.cpp  lua_all_bindings.cpp  temp.txt
gameplay/src/main/java/com/gyabinet/gameplay/: NativeLib.java
gameplay/src/test/java/com/gyabinet/gameplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
samples/browser/: Application.mk  build.gradle  local.properties
samples/browser/android/: project.properties
samples/browser/android/jni/: Android.mk  Application.mk
samples/browser/src/main/: AndroidManifest.xml
samples/character/: build.gradle
samples/character/android/jni/: Android.mk  Application.mk
samples/character/src/main/: AndroidManifest.xml
samples/character/src/main/assets/: game.config
samples/character/src/main/cpp/: CMakeLists.txt  main.cpp
samples/character/src/main/cpp/src/: CharacterGame.cpp
